<resources>
    <string name="app_name">Best Optioning</string>
    <string name="vehicle_list">Vehicle List</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="result">Results</string>
    <string name="cool_way">A cool way to pick your car</string>
    <string name="madeBy">©TechPig 2021</string>
    <string name="title">Best Optioning Title</string>
    <string name="subtitle">Best Optioning subtitle</string>
    <string name="vehicle_make">E.g. Nissan/Versa</string>
    <string name="required_vehicle_information">Required Vehicle Information</string>
    <string name="date_of_manufacturing">Year and month of manufacture</string>
    <string name="vehicle_model">Vehicle Model</string>
    <string name="mm_yyyy">%1$s%2$s</string>
    <string name="month_year">month / year</string>
    <string name="odometer">ODOMETER</string>
    <string name="current_odometer">ODOMETER</string>
    <string name="unit">Unit</string>
    <string name="miles">mi</string>
    <string name="kilometers">km</string>
    <string name="currency">Currency</string>
    <string name="price">PRICE</string>
    <string name="usd">USD</string>
    <string name="canadian_dollar">CAD</string>
    <string name="euro">EUR</string>
    <string name="japanese_yen">JPY</string>
    <string name="british_pound">GBP</string>
    <string name="swiss_franc">CHF</string>
    <string name="australian_dollar">AUD</string>
    <string name="brazilian_real">BRL</string>
    <string name="required_usage_information">Required Usage Information</string>
    <string name="estimated_distance_you_d_drive_yearly">Est. distance you\'d drive yearly</string>
    <string name="mk_end">M/K End</string>
    <string name="mk_yearly">M/K Yearly</string>
    <string name="cancel">Cancel</string>
    <string name="continue_txt">Continue</string>
    <string name="vehicleAdded">Vehicle successfully added</string>
    <string name="default_month">Found on VIN-Label often seen by the driver\'s door.\nIn places where Year-only is to be entered, leave default month JUNE on.</string>
    <string name="odometerReading">Enter present odometer reading in either km or mi.</string>
    <string name="costs">Include in this entry any additional costs of extras or repairs if needed.</string>
    <string name="costs_2">Include in the price entries any additional costs for extras or repairs if needed.</string>
    <string name="mk_end_tv">Estimated number of mi/km when you wouldn\'t like to drive this vehicle ANYMORE.  If not sure, leave the default value.</string>
    <string name="mk_year_tv">Enter the estimated number of mi/km you would drive this vehicle in ONE YEAR.  If not sure, leave the default value.</string>
    <string name="results">Results</string>
    <string name="other_currencies">OTHER CURRENCIES</string>
    <string name="_1usd">1 US$ =</string>
    <string name="pesos_example">E.g. 2750 Pesos</string>
    <string name="_25000">20000</string>
    <string name="_300000">250000</string>
    <string name="month">Month</string>
    <string name="year_example">E.g. 2008</string>
    <string name="history">History</string>
    <string name="compare">Compare</string>
    <string name="vehicle_list_title">Check all entries for errors. X-out the wrong one and re-do it. This is the only data that will be processed to obtain the results shown on the following page.</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate us</string>
    <string name="support">Support</string>
    <string name="email_subject">BestOptioning Support</string>
    <string name="coose_one">Choose One</string>
    <string name="new_comparison">New Comparison</string>
    <string name="donate">Donate</string>
    <string name="finish">Finish</string>
    <string name="best_choice">VII INDICATORS</string>
    <string name="best_bet">UCI INDICATORS</string>
    <string name="bpr">BPR</string>
    <string name="best_possible_match_between_both_indicators">It\'s the ideal <b>VII/UCI</b> relationship: </string>
    <string name="bpm_example">0.806</string>
    <string name="best_option">VII/UCI RELATIONSHIPS</string>
    <string name="logo">logo</string>
    <string name="next">Next</string>
    <string name="km">km</string>
    <string name="best_choice_desc">They are based on the combination of price, mileage and date of manufacture.</string>
    <string name="best_bet_desc">They are based on the buyer\'s personal needs expressed by the M/K data.</string>
    <string name="best_choice_desc_bottom">The vehicle with the highest <strong><b>VII</b></strong> is your </string>
    <string name="best_choice_text"><i><b>best-choice</b></i></string>
    <string name="best_bet_text"><i><b>best-bet.</b></i></string>
    <string name="best_option_text"><i><b>It\'s your BEST-OPTION!</b></i></string>
    <string name="best_bet_desc_bottom">The vehicle with the lowest <b>UCI</b> is your </string>
    <string name="vin_ucn_relations_desc">The vehicle with the closest value to the <b>BPR</b>:</string>
    <string name="mileage_info">Mileage</string>
    <string name="make_model">Make/Model</string>
    <string name="price_of_vehicle">Price of the vehicle</string>
    <string name="vin_ucn_relations_desc_2">It\'s your </string>
    <string name="good_to_go">You\'re good to go!</string>
    <string name="bo">Best Option:</string>
    <string name="vehicle_score">Vehicle score:</string>
    <string name="success">Success!</string>
    <string name="vehicle_added">Your vehicle has been added</string>
    <string name="error">Error</string>
    <string name="provide_year_of_manufacture">You must provide the year of manufacture</string>
    <string name="provide_price">You must provide a price</string>
    <string name="provide_equivalence">You must provide the equivalence of a dollar in your currency</string>
    <string name="january">JANUARY</string>
    <string name="february">FEBRUARY</string>
    <string name="march">MARCH</string>
    <string name="april">APRIL</string>
    <string name="may">MAY</string>
    <string name="june">JUNE</string>
    <string name="july">JULY</string>
    <string name="august">AUGUST</string>
    <string name="september">SEPTEMBER</string>
    <string name="october">OCTOBER</string>
    <string name="november">NOVEMBER</string>
    <string name="december">DECEMBER</string>
    <string name="provide_make_and_model">You must provide make and model</string>
    <string name="provide_odometer_reading">You must provide the odometer reading</string>
    <string name="fill_all_the_fields">You must fill all the fields</string>
    <string name="vehicle_removed">Vehicle removed</string>
    <string name="thank_you_for_your_support">Thank you for your support!</string>
    <string name="donate_label">Donate</string>
    <string name="other_amount">Other amount</string>
    <string name="disconnected">Disconnected</string>
    <string name="connected">Connected</string>
    <string name="billing_not_ready">Billing client not ready</string>
    <string name="price_in_your_currency">Price in your currency</string>
    <string name="email_message">" "</string>
    <string name="must_provide_a_year_between">You must provide a year between 1920 and </string>
    <string name="_250000">250000</string>
    <string name="_20000">20000</string>
    <string name="your_best_option_label">Your Best Option!</string>
    <string name="see_results">Results</string>
    <string name="pay_as_you_wish">Pay as you wish</string>
    <string name="remove_button">X</string>
    <string name="_15_usd">$15 USD</string>
    <string name="_25_usd">$25 USD</string>
    <string name="_1_usd">$1 USD</string>
    <string name="_3_usd">$3 USD</string>
    <string name="_5_usd">$5 USD</string>
    <string name="_10_usd">$10 USD</string>
    <string name="image">image</string>
    <string name="desc">description</string>
    <string name="harder_to_ask">"It\'s   to   give   than  to\nbetter   is   receive"</string>
    <string name="descifra_la_frase_y_presiona_un_bot_n">Find the phrase and press a button</string>
    <string name="string1">it\'s</string>
    <string name="string2">to</string>
    <string name="string3">give</string>
    <string name="string4">than</string>
    <string name="string5">to</string>
    <string name="string6">better</string>
    <string name="string7">is</string>
    <string name="string8">it</string>
    <string name="string9">receive</string>
</resources>