<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/add_menu"
        android:title="@string/add_vehicle"
        android:icon="@drawable/ic_add"
        app:cnb_backgroundColor="@color/soft_purple"
        app:cnb_iconColor="@color/hard_purple"
        app:cnb_iconTintMode="src_in"
        app:cnb_textColor="@color/hard_purple" />
    <item
        android:id="@+id/list_menu"
        android:title="@string/vehicle_list"
        android:icon="@drawable/ic_list"
        app:cnb_backgroundColor="@color/soft_yellow"
        app:cnb_iconColor="@color/hard_yellow"
        app:cnb_iconTintMode="src_in"
        app:cnb_textColor="@color/hard_yellow" />
    <item
        android:id="@+id/result_menu"
        android:title="@string/result"
        android:icon="@drawable/ic_result"
        app:cnb_backgroundColor="@color/soft_turquoise"
        app:cnb_iconColor="@color/hard_turquoise"
        app:cnb_iconTintMode="src_in"
        app:cnb_textColor="@color/hard_turquoise"/>
</menu>