<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/result_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultFragment">

    <LinearLayout
        android:id="@+id/resultsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="6"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:text="@string/best_choice"
                        android:textSize="20sp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/best_choice_desc" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/bestChoiceRv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="5dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/best_choice_desc_bottom" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="6"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:text="@string/best_bet"
                        android:textSize="20sp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/best_bet_desc" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/bestBetRv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="5dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/best_bet_desc_bottom" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bpr"
                        android:textSize="20sp"
                        android:textStyle="bold|italic" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:text="@string/best_possible_match_between_both_indicators"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/bpmScore"
                            style="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/bpm_example"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="5"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:text="@string/best_option"
                        android:textSize="20sp"
                        android:textStyle="bold|italic" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/bestOptionRv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="5dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/vin_ucn_relations_desc" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <!-- Botones -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:baselineAligned="false"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                tools:ignore="NestedWeights">

                <Button
                    android:id="@+id/finish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/finish" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/donateButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pay as you wish" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>