<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.HomeActivity">

    <LinearLayout
        android:id="@+id/mainTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <ImageView
            android:id="@+id/mainLogo"
            android:layout_width="wrap_content"
            android:layout_height="112dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop" />

        <ImageView
            android:id="@+id/titleIV"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/title"
            android:scaleType="centerInside" />

        <ImageView
            android:id="@+id/subtitleIV"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginHorizontal="25dp"
            android:contentDescription="@string/subtitle"
            android:scaleType="fitCenter" />
    </LinearLayout>

    <TextView
        android:id="@+id/main_descriprion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="2dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:lineHeight="20dp"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:targetApi="p" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addVehicleMainButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add_vehicle"
        android:textSize="16sp" />
</LinearLayout>