<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/listVehicle_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ListVehicleFragment">

    <LinearLayout
        android:id="@+id/vehicles_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/vehicle_list_title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/vehicleListRv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="7dp"
            tools:itemCount="5"
            tools:listitem="@layout/vehicles_list_layout" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vehicles_list"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vehicles_list">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addVehicle"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/add_vehicle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/compareButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp
"
            android:text="@string/result" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>